Fixed contrast and added description to make lighthouse happy

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   color: #DFDFDF
 }
 
+a {
+    color: #FF6688;
+}
+
 p {
     font-family: Geneva sans-serif;
 }
